force-app/main/default/objects/OpenWeather_Settings__mdt/OpenWeather_Settings__mdt.object-meta.xml
<CustomObject>
    <label>OpenWeather Settings</label>
    <pluralLabel>OpenWeather_Settings</pluralLabel>
</CustomObject>