force-app/main/default/objects/OpenWeather_Settings__mdt/fields/App_Id__c.field-meta.xml
<CustomField>
    <fullName>App_Id__c</fullName>
    <label>App Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>