force-app/main/default/objects/OpenWeather_Settings__mdt/fields/Error_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Error_Notification_Email__c</fullName>
    <label>Error_Notification_Email</label>
    <type>Email</type>
</CustomField>